--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -9,9 +9,77 @@
 
     <title>About Page</title>
     <link rel="stylesheet" href="/css/about-us.css"/>
+    <link rel="stylesheet" href="./../css/header.css">
+    <link rel="stylesheet" href="./../css/footer1.css">
 </head>
 
 <body>
+
+
+    <div class="nav-container flex" id="nav">
+        <div class="right-flex flex">
+            <img src="./../imgs/menu.png" height="40px" class="hamburger" onclick="openNav()" alt="">
+            <a href="./../index.html"> <img src="./../imgs/logo.png" class="logo" alt=""></a>
+        </div>
+        <div class="mid-flex">
+            <ul class="menu-list flex" type="none">
+                <li><a href="./../index.html">Home</a></li>
+                <li><a href="./../Pages/about-us.html">About Us</a></li>
+                <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
+                <li><a href="./../Pages/services.html">Services</a></li>
+            </ul>
+        </div>
+        <div class="left-flex">
+            <img src="./../icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
+            <a href="./../Pages/login-page.html"><img src="./../icons/add-contact.png" class="nav-icons login-icon"
+                    alt=""></a>
+            <img src="./../icons/heart.png" class="nav-icons  heart-icon" alt="">
+            <a href="./../Pages/add-to-cart.html"><img src="./../icons/shopping-bag.png" class="nav-icons" alt=""
+                    onclick="openCarts()"></a>
+        </div>
+    </div>
+    <header>
+
+        <div id="myOverlay" class="overlay">
+            <span class="closebtn" onclick="closeSearch()" title="Close Search">x</span><br><br><br>
+            <h1 class="search-title">Search Your Favorite Ice-Cream </h1>
+            <h2 class="search-title">And Hit Enter...</h2>
+            <div class="overlay-content">
+                <form>
+                    <input type="text" placeholder="Search Your Favorite Ice-Cream Here..." name="search">
+                </form>
+            </div>
+        </div>
+        <!-- <div id="mySidenav1" class="sidenav1">
+            <a href="javascript:void(0)" class="closebtn1" onclick="closeNavs()">&times;</a>
+            <p class="cart1">Shopping Cart</p>
+            <hr>
+        </div> -->
+
+
+        </div>
+        <div class="slide-btn-comtain" onclick="changeBg()">
+            <img src="./../icons/new-moon.png" alt="" class="slide-btn" id="slide-btn"
+                onclick="changeSlideBtn('./imgs/s5.jpg')">
+            <img src="./../icons/oval.png" alt="" class="slide-btn btn-2" id="slide-btn1"
+                onclick="changeSlideBtn('./imgs/s6.jpg')">
+        </div>
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <ul class="menu-list" type="none">
+                <li><a href="./../index.html">Home</a></li>
+                <li><a href="./../Pages/about-us.html">About Us</a></li>
+                <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
+                <li><a href="./../Pages/services.html">Services</a></li>
+            </ul>
+        </div>
+
+
+    </header>
+    <!-- ----------------------Nav-Bar-End-------------------------------- -->
+
+
+
 
     <div class="banner-class heading-font fw-bolder ">
         <img src="/imgs/about-page-img/main-img.jpg" class="banner-img" />
