--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -7,14 +7,78 @@
   <link rel="stylesheet" href="./../css/menu-page.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="./../css/header.css">
+  <script src="./../JS/header.js"></script>
+  <script src="./../JS/index.js"></script>
 </head>
 <body style="background-color: #fffffb;">
-  <header >
-  <br><br>
-    <h1 >Ice Cream Parlor</h1>
-    <br>
+    <div class="nav-container-main1 flex-display" >
+        <div class="right-flex flex-display">
+            <img src="./imgs/menu.png" height="40px" class="hamburger-img-nav" onclick="openNav()" alt="">
+            <a href="./index.html"> <img src="./imgs/logo.png" class="navigationbar-logo" alt=""></a>
+        </div>
+        <div class="mid-flex">
+            <ul class="menu-list flex-display" type="none">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="./Pages/about-us.html">About Us</a></li>
+                <li><a href="./Pages/contact-page.html">Contact Us</a></li>
+                <li><a href="./Pages/services.html">Services</a></li>
+            </ul>
+        </div>
+        <div class="left-flex">
+            <img src="./icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
+            <a href="./Pages/login-page.html"><img src="./icons/add-contact.png" class="nav-icons login-icon"
+                    alt=""></a>
+            <img src="./icons/heart.png" class="nav-icons  heart-icon" alt="">
+            <a href="./Pages/add-to-cart.html"><img src="./icons/shopping-bag.png" class="nav-icons" alt=""
+                    onclick="openCarts()"></a>
+        </div>
+    </div>
+    <header>
 
-  </header>
+        <div id="myOverlay" class="overlay">
+            <span class="closebtn" onclick="closeSearch()" title="Close Search">x</span><br><br><br>
+            <h1 class="search-title">Search Your Favorite Ice-Cream </h1>
+            <h2 class="search-title">And Hit Enter...</h2>
+            <div class="overlay-content">
+                <form>
+                    <input type="text" placeholder="Search Your Favorite Ice-Cream Here..." name="search">
+                </form>
+            </div>
+        </div>
+        <!-- <div id="mySidenav1" class="sidenav1">
+            <a href="javascript:void(0)" class="closebtn1" onclick="closeNavs()">&times;</a>
+            <p class="cart1">Shopping Cart</p>
+            <hr>
+        </div> -->
+
+        <div class="bg-img" id="bg-img">
+            <div class="text-overlay">
+                <span class="heading">Style Destination</span>
+                <h1>Taste From The </h1>
+                <h1>Good Old Days.</h1>
+                <button class="buyNow-btn1">SHOP NOW</button>
+            </div>
+
+        </div>
+        <div class="slide-btn-comtain" onclick="changeBg()">
+            <img src="./icons/new-moon.png" alt="" class="slide-btn" id="slide-btn"
+                onclick="changeSlideBtn('./imgs/s5.jpg')">
+            <img src="./icons/oval.png" alt="" class="slide-btn btn-2" id="slide-btn1"
+                onclick="changeSlideBtn('./imgs/s6.jpg')">
+        </div>
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <ul class="menu-list" type="none">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="./Pages/about-us.html">About Us</a></li>
+                <li><a href="./Pages/contact-page.html">Contact Us</a></li>
+                <li><a href="./Pages/services.html">Services</a></li>
+            </ul>
+        </div>
+
+
+    </header>
  <div class="name-container text-light text-center ">
     <br><br>
    <h2 class="page-heading text-center "> Products</h2>
