--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu Page</title>
   <link rel="stylesheet" href="./../css/menu-page.css">
-
+  <link rel="stylesheet" href="./../css/header.css">
+  <link rel="stylesheet" href="./../css/footer1.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./../css/header.css">
   <script src="./../JS/header.js"></script>
@@ -52,14 +53,7 @@
             <hr>
         </div> -->
 
-        <div class="bg-img" id="bg-img">
-            <div class="text-overlay">
-                <span class="heading">Style Destination</span>
-                <h1>Taste From The </h1>
-                <h1>Good Old Days.</h1>
-                <button class="buyNow-btn1">SHOP NOW</button>
-            </div>
-
+        
         </div>
         <div class="slide-btn-comtain" onclick="changeBg()">
             <img src="./icons/new-moon.png" alt="" class="slide-btn" id="slide-btn"
@@ -709,9 +703,76 @@
   
 
  
-  <footer >
-<br><br><br>    <p >&copy; 2024 Ice Cream Parlor</p> <br><br><br>
-  </footer>
+   <footer>
+    <div class="flex-display footer-cont">
+        <div>
+            <img src="./imgs/logo1.png" alt="" id="footer-logo">
+            <h4 class="slogun">
+                "Scoops of joy, frozen delight,<br>
+                Taste the magic, day or night!"</h4>
+            <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19"
+                    onclick="return ready()" class="b" target="_blank"><i
+                        class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
+                    href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" onclick="return ready()" class="a"
+                    target="_blank"><i class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a
+                    href="https://wa.me/7744049590" onclick="return ready()" class="b" target="_blank"><i
+                        class="fa-brands fa-whatsapp fa-brand"></i></a>
+                &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return ready()" class="b"
+                    target="_blank"><i class="fa-brands fa-github fa-brand"></i></a></div>
+            <br>
+
+
+
+        </div>
+        <div class="quick-links">
+            <UL type="none">
+                <li>Quick Links</li>
+                <hr>
+                <li>
+                    <ul type="none">
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./Pages/about-us.html">About Us</a></li>
+                        <li><a href="./Pages/contact-page.html">Contact Us</a></li>
+                        <li><a href="./Pages/services.html">Services</a></li>
+                        <LI><a href="./Pages/menu-page.html">Menu Card</a></LI>
+                    </ul>
+                </li>
+            </UL>
+        </div>
+        <div class="quick-links1">
+            <UL type="none">
+                <li>Help & Information</li>
+                <hr>
+                <li>
+                    <ul type="none">
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Terms & Conditions</a></li>
+                        <li><a href="">Product Return</a></li>
+                        <li><a href="">Wholesale Policy</a></li>
+                        <li><a href="">Help Center</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="quick-links1">
+            <UL type="none">
+                <li>Contact Us</li>
+                <hr>
+                <li>
+                    <ul type="none">
+                        <li class="slogun1">1/2, Rachik House, <br> Yeolekar, College Road, <br> Nashik, Maharashtra
+                        </li>
+                        <li><a href="">0253 230 5411</a></li>
+                        <li><a href="" target="mailto">creamydesert@gmail.com</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <hr class="hr">
+    <p id="copyright" style="text-align:center;">Copyright @ Creamy Desert | All Rights Reserved.</p>
+    <img src="./icons/logoo-removebg-preview.png" class="visa-image" alt="">
+</footer>
   
   <script src="https://kit.fontawesome.com/029a190c6b.js" crossorigin="anonymous"></script>
 </body>
